--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@types/lodash": "^4.14.194",
-    "axios": "^1.4.0",
+    "axios": "1.3.3",
     "lodash": "^4.17.21",
     "native-base": "^3.4.28",
     "react": "18.2.0",
